fix letter spacing for js files

--- a/styles.less
+++ b/styles.less
@@ -66,6 +66,9 @@ atom-text-editor {
       text-indent: -9999px;
   }
 
+  span.syntax--meta.syntax--export.syntax--js .syntax--keyword.syntax--control.syntax--js {
+    letter-spacing: 3px;
+  }
   span.syntax--meta.syntax--export.syntax--js .syntax--keyword.syntax--control.syntax--js:after {
     background-image: url('https://s-media-cache-ak0.pinimg.com/originals/7e/1f/59/7e1f59824f6c0e7c34815d340b538646.gif');
     background-size: 30px 23px;
